[gd_scene load_steps=4 format=3 uid="uid://canx4b4pr7n3c"]

[ext_resource type="Script" path="res://scripts/BallPlayerCard.gd" id="1_my46u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gf3ry"]
content_margin_left = 2.0
content_margin_top = 1.0
content_margin_right = 2.0
content_margin_bottom = 1.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_giq3u"]
content_margin_left = 1.0
content_margin_top = 1.0
content_margin_right = 1.0
content_margin_bottom = 1.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 1

[node name="BallPlayerCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.75
script = ExtResource("1_my46u")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -165.0
offset_right = 125.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Offense" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="OffenseValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Offense"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="OffenseLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Offense"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Offense"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Defense" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="DefenseValue" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Defense"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="DefenseLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer/Defense"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Defense"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="3PointBonus2" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 15
text = "PG"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerName" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 20
text = "FIRSTNAME
LASTNAME"

[node name="Control" type="Control" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 0
columns = 4

[node name="ColumnHeader1" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gf3ry")

[node name="RollRange" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/ColumnHeader1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "ROLL"
horizontal_alignment = 1

[node name="ColumnHeader2" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gf3ry")

[node name="Points" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/ColumnHeader2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "PTS"
horizontal_alignment = 1

[node name="ColumnHeader3" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gf3ry")

[node name="Assists" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/ColumnHeader3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "AST"
horizontal_alignment = 1

[node name="ColumnHeader4" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gf3ry")

[node name="Rebounds" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/ColumnHeader4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "REB"
horizontal_alignment = 1

[node name="Row1Col1" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="RollRange" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row1Col1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1-4"
horizontal_alignment = 1

[node name="Row1Col2" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Points" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row1Col2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row1Col3" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Assists" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row1Col3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row1Col4" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Rebounds" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row1Col4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row2Col1" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="RollRange" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row2Col1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1-4"
horizontal_alignment = 1

[node name="Row2Col2" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Points" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row2Col2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row2Col3" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Assists" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row2Col3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row2Col4" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Rebounds" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row2Col4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row3Col1" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="RollRange" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col1"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1-4"
horizontal_alignment = 1

[node name="Row3Col2" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Points" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row3Col3" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Assists" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col3"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row3Col4" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Rebounds" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col4"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row3Col5" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="RollRange" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col5"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1-4"
horizontal_alignment = 1

[node name="Row3Col6" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Points" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col6"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row3Col7" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Assists" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col7"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="Row3Col8" type="PanelContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_giq3u")

[node name="Rebounds" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/GridContainer/Row3Col8"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 1

[node name="3PointBonus" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_font_sizes/font_size = 10
text = "3pt +1"
