class_name BallPlayerCard
extends Control

@onready var offense_value = $Panel/MarginContainer/VBoxContainer/HBoxContainer/Offense/OffenseValue as Label
@onready var defense_value = $Panel/MarginContainer/VBoxContainer/HBoxContainer/Defense/DefenseValue as Label
@onready var player_name = $Panel/MarginContainer/VBoxContainer/HboxContainer2/PlayerName as Label